<resources>
    <string name="app_name">Calcule o combustível</string>
    <string name="distancia">Distância</string>
    <string name="total_quilometros">Total de Quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por Litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="km_por_litro">Kms por Litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="todos_campos">Preencha todos os campos</string>
    <string name="campos_validos">Informe valores válidos</string>
</resources>